force-app/main/default/objects/Program__c/Program__c.object-meta.xml
<CustomObject>
    <description>Initiatives that AARP provides to support the public, includes geographic divisions of programs.</description>
    <label>Program</label>
    <nameField>
        <label>Program</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>