force-app/main/default/objects/Program__c/fields/AARP_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>AARP_Active_Date__c</fullName>
    <description>Date this Chapter became active with AARP.</description>
    <inlineHelpText>Enter the date this Chapter became active with AARP.</inlineHelpText>
    <label>AARP Active Date</label>
    <type>Date</type>
</CustomField>