force-app/main/default/objects/Program__c/fields/AARP_Dissolution_Date__c.field-meta.xml
<CustomField>
    <fullName>AARP_Dissolution_Date__c</fullName>
    <description>Date this Chapter was dissolved.</description>
    <inlineHelpText>Enter the date this Chapter was dissolved.</inlineHelpText>
    <label>AARP Dissolution Date</label>
    <type>Date</type>
</CustomField>