force-app/main/default/objects/Program__c/fields/AARP_Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>AARP_Inactive_Date__c</fullName>
    <description>Date this Chapter became inactive with AARP.</description>
    <inlineHelpText>Enter the date this Chapter became inactive with AARP.</inlineHelpText>
    <label>AARP Inactive Date</label>
    <type>Date</type>
</CustomField>