force-app/main/default/objects/Program__c/fields/AARP_Status__c.field-meta.xml
<CustomField>
    <fullName>AARP_Status__c</fullName>
    <description>Chapter&#39;s current AARP status.</description>
    <inlineHelpText>What is chapter&#39;s current status with AARP?</inlineHelpText>
    <label>AARP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Dissolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>