force-app/main/default/objects/Program__c/fields/Annual_Meeting_Month__c.field-meta.xml
<CustomField>
    <fullName>Annual_Meeting_Month__c</fullName>
    <description>Month annual meeting is held (for non-profit organization compliance, annual meetings are required).</description>
    <inlineHelpText>What month is annual meeting held?</inlineHelpText>
    <label>Annual Meeting Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>