force-app/main/default/objects/Program__c/fields/Branding_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Branding_Descriptor__c</fullName>
    <description>Formula text field to that recursively maintains enterprise level program throughout program hierarchy</description>
    <formula>Enterprise_Brand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Enterprise level program this program falls under.</inlineHelpText>
    <label>Branding Descriptor</label>
    <type>Text</type>
</CustomField>