force-app/main/default/objects/Program__c/fields/Bylaws_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Bylaws_Accepted__c</fullName>
    <description>Have AARP bylaws been accepted by Chapter?</description>
    <inlineHelpText>Have AARP bylaws been accepted by Chapter?</inlineHelpText>
    <label>Bylaws Accepted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>