force-app/main/default/objects/Program__c/fields/Chapter_Dues_Amount__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Dues_Amount__c</fullName>
    <description>Amount for Chapter dues.</description>
    <inlineHelpText>Enter the amount for Chapter dues.</inlineHelpText>
    <label>Chapter Dues Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>