force-app/main/default/objects/Program__c/fields/Chapter_Email__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Email__c</fullName>
    <description>Chapters general email address.</description>
    <inlineHelpText>General contact email address for Chapters.</inlineHelpText>
    <label>Chapter Email</label>
    <type>Email</type>
</CustomField>