force-app/main/default/objects/Program__c/fields/Chapter_Number__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Number__c</fullName>
    <description>Unique number assigned to this Chapter.</description>
    <inlineHelpText>Unique number assigned to this Chapter.</inlineHelpText>
    <label>Chapter Number</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>