force-app/main/default/objects/Program__c/fields/Chapter_URL__c.field-meta.xml
<CustomField>
    <fullName>Chapter_URL__c</fullName>
    <description>URL for this Chapter</description>
    <inlineHelpText>Enter the URL for this Chapter.</inlineHelpText>
    <label>Chapter URL</label>
    <type>Url</type>
</CustomField>