force-app/main/default/objects/Program__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <defaultValue>&quot;CF4&quot;</defaultValue>
    <description>Captures the company code used by ADP for stipend processing.</description>
    <inlineHelpText>This is a read only field used to capture the company code used by ADP for stipend processing. Its value will always be CF4.</inlineHelpText>
    <label>Company Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>