force-app/main/default/objects/Program__c/fields/Consent_Contact__c.field-meta.xml
<CustomField>
    <fullName>Consent_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AARP may occasionally disclose/publish contact information for AARP Chapter Presidents in order to allow interested persons to contact local AARP Chapters.</description>
    <inlineHelpText>Person that has provided AARP consent to disclose his/her contact information to persons interested in contacting this chapter.</inlineHelpText>
    <label>Consent Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>