force-app/main/default/objects/Program__c/fields/Current_Budget_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Budget_Year__c</fullName>
    <description>Budget for the Current Year</description>
    <label>Current Year Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>