force-app/main/default/objects/Program__c/fields/Current_Year_Participant_Goal__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Participant_Goal__c</fullName>
    <description>Captures Driver Safety participant goal for the current year.</description>
    <inlineHelpText>Enter the Driver Safety participant goal for the current year.</inlineHelpText>
    <label>Current Year Participant Goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>