force-app/main/default/objects/Program__c/fields/Dissolution_with_Secretary_of_State__c.field-meta.xml
<CustomField>
    <fullName>Dissolution_with_Secretary_of_State__c</fullName>
    <description>If this Chapter&#39;s status is dissolved, has the Chapter filed dissolution with the Secretary of State Office?  This is the dependent field to controlling field, Chapter_Status__c.</description>
    <inlineHelpText>If this Chapter status is dissolved, has the Chapter filed dissolution with the Secretary of State Office?</inlineHelpText>
    <label>Dissolution with Secretary of State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AARP_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>