force-app/main/default/objects/Program__c/fields/Employer_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Employer_ID_Number__c</fullName>
    <description>What is this Chapter&#39;s employer ID number?</description>
    <inlineHelpText>What is this Chapter&#39;s employer ID number?</inlineHelpText>
    <label>Employer ID Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>