force-app/main/default/objects/Program__c/fields/Enterprise_Brand__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Brand__c</fullName>
    <label>Enterprise Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>