force-app/main/default/objects/Program__c/fields/Enterprise_Level_Program__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Level_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box should be checked for AARP programs at the enterprise level.</description>
    <inlineHelpText>This box is checked for AARP programs at the enterprise level.</inlineHelpText>
    <label>Enterprise Level Program</label>
    <type>Checkbox</type>
</CustomField>