force-app/main/default/objects/Program__c/fields/Home_Department__c.field-meta.xml
<CustomField>
    <fullName>Home_Department__c</fullName>
    <description>Captures the department code used by ADP to identify Experience Corps branches.</description>
    <inlineHelpText>Select the home department based on the appropriate branch: 63110 for Baltimore, 63120 for Chicago, 63130 for Philadelphia, or 63140 for Washington D.C. If this program is an affiliate, leave this field blank.</inlineHelpText>
    <label>Home Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>631100</fullName>
            </value>
            <value>
                <fullName>631200</fullName>
            </value>
            <value>
                <fullName>631300</fullName>
            </value>
            <value>
                <fullName>631400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>