force-app/main/default/objects/Program__c/fields/I_Expenses_Cap_Amount__c.field-meta.xml
<CustomField>
    <fullName>I_Expenses_Cap_Amount__c</fullName>
    <description>Maximum reimbursement amount allowed for counseling activity (I) expenses per tax season.</description>
    <inlineHelpText>Maximum reimbursement amount allowed for counseling activity (I) expenses per tax season.</inlineHelpText>
    <label>I-Expenses Cap Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>