force-app/main/default/objects/Program__c/fields/Legal_Incorporation_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Incorporation_Date__c</fullName>
    <description>Date chapter was legally incorporated.</description>
    <inlineHelpText>What date was this chapter legally incorporated?</inlineHelpText>
    <label>Legal Incorporation Date</label>
    <type>Date</type>
</CustomField>