force-app/main/default/objects/Program__c/fields/Meeting_Days__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Days__c</fullName>
    <description>Day(s) of the week this Chapter schedules its meetings.</description>
    <inlineHelpText>What day(s) of the week does this Chapter schedules its meetings?</inlineHelpText>
    <label>Meeting Days</label>
    <length>70</length>
    <type>Text</type>
</CustomField>