force-app/main/default/objects/Program__c/fields/Meeting_Times__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Times__c</fullName>
    <description>Enter start and end time(s) for this Chapter&#39;s meetings.</description>
    <inlineHelpText>What are the start and end time(s) for this Chapter&#39;s meetings?</inlineHelpText>
    <label>Meeting Times</label>
    <type>TextArea</type>
</CustomField>