force-app/main/default/objects/Program__c/fields/National_ID__c.field-meta.xml
<CustomField>
    <fullName>National_ID__c</fullName>
    <description>Captures the National ID number for a Tax-Aide site.</description>
    <displayFormat>NI{0000000}</displayFormat>
    <inlineHelpText>This ID number is created automatically and cannot be edited.</inlineHelpText>
    <label>National ID</label>
    <type>AutoNumber</type>
</CustomField>