force-app/main/default/objects/Program__c/fields/Parent_Program__c.field-meta.xml
<CustomField>
    <fullName>Parent_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent program for this program. Note: Enterprise level programs do not have parent programs.</description>
    <inlineHelpText>Select the parent program for this program record. (NOTE: Enterprise level programs do not have parent programs.)</inlineHelpText>
    <label>Parent Program</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Program__c.Enterprise_Level_Program__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Sub-Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>