force-app/main/default/objects/Program__c/fields/Parent_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Short_Name__c</fullName>
    <formula>Parent_Program__r.Short_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Short Name</label>
    <type>Text</type>
</CustomField>