force-app/main/default/objects/Program__c/fields/Program_Heirarchy__c.field-meta.xml
<CustomField>
    <fullName>Program_Heirarchy__c</fullName>
    <description>Based on its hierarchy, calculates the level at which the program is. Level could be 1,2,3,4,5.</description>
    <formula>IF(Enterprise_Level_Program__c, 
&#39;1&#39;, 
IF(Parent_Program__r.Enterprise_Level_Program__c, 
&#39;2&#39;, 
IF(Parent_Program__r.Parent_Program__r.Enterprise_Level_Program__c, 
&#39;3&#39;, 
IF(Parent_Program__r.Parent_Program__r.Parent_Program__r.Enterprise_Level_Program__c, 
&#39;4&#39;, 
IF(Parent_Program__r.Parent_Program__r.Parent_Program__r.Parent_Program__r.Enterprise_Level_Program__c, 
&#39;5&#39;, 
IF(Parent_Program__r.Parent_Program__r.Parent_Program__r.Parent_Program__r.Parent_Program__r.Enterprise_Level_Program__c, 
&#39;6&#39;, 
&#39;Could not find a descendant marked as Enterprise Level&#39; 
) 
) 
) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Heirarchy</label>
    <type>Text</type>
</CustomField>