force-app/main/default/objects/Program__c/fields/Program_Location__c.field-meta.xml
<CustomField>
    <fullName>Program_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created to allow visibility of program location for reimbursement records.</description>
    <label>Program Location</label>
    <referenceTo>Program_Location__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>