force-app/main/default/objects/Program__c/fields/Quorum_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Quorum_Percentage__c</fullName>
    <description>Percentage needed for this chapter for a quorum to be reached.</description>
    <inlineHelpText>What percentage is needed for this chapter for a quorum to be reached?</inlineHelpText>
    <label>Quorum Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>