force-app/main/default/objects/Program__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <description>A short name for this program record that describes its place in the program hierarchy.  Is used to tag orders within RRD CustomPoint and to enable &quot;Team Sharing&quot; visibility within CustomPoint.</description>
    <label>Short Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>