force-app/main/default/objects/Program__c/fields/SIDN__c.field-meta.xml
<CustomField>
    <fullName>SIDN__c</fullName>
    <description>Unique number used by Tax-Aide for tracking related to IRS software.</description>
    <inlineHelpText>Enter this program&#39;s IRS Site Identification Number.</inlineHelpText>
    <label>SIDN</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>