force-app/main/default/objects/Program__c/fields/Split_State__c.field-meta.xml
<CustomField>
    <fullName>Split_State__c</fullName>
    <label>Split State</label>
    <length>18</length>
    <type>Text</type>
</CustomField>