force-app/main/default/objects/Program__c/fields/Split_State_Level_Program__c.field-meta.xml
<CustomField>
    <fullName>Split_State_Level_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box should be checked for Tax-Aide programs at the split-state level.</description>
    <inlineHelpText>This box is checked for Tax-Aide programs at the split-state level.</inlineHelpText>
    <label>Split-State Level Program</label>
    <type>Checkbox</type>
</CustomField>