force-app/main/default/objects/Program__c/fields/Total_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Total_Volunteers__c</fullName>
    <description>Total Number of Volunteers associated with the Program</description>
    <label>Total Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>