force-app/main/default/objects/Program__c/validationRules/Enterprise_Level_Programs_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Enterprise_Level_Programs_Read_Only</fullName>
    <active>true</active>
    <description>Only system administrators can edit programs with Enterprise Level Programs = True.</description>
    <errorConditionFormula>AND(
Enterprise_Level_Program__c = TRUE,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;System Integrator&quot;
)</errorConditionFormula>
    <errorDisplayField>Enterprise_Level_Program__c</errorDisplayField>
    <errorMessage>Only system administrators can edit Enterprise Level Programs.  Please contact your system administrator for any changes needed on this record.</errorMessage>
</ValidationRule>