force-app/main/default/objects/Program__c/validationRules/Parent_Program_is_Required_if_Enterprise.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Program_is_Required_if_Enterprise</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Parent_Program__c), Not( Enterprise_Level_Program__c))</errorConditionFormula>
    <errorMessage>A Parent Program is required unless this program is an Enterprise Level Program.</errorMessage>
</ValidationRule>