force-app/main/default/objects/Program__c/validationRules/Program_Name_Read_Only_For_Chapters.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Name_Read_Only_For_Chapters</fullName>
    <active>true</active>
    <description>Chapter profiles cannot edit program name.</description>
    <errorConditionFormula>AND(
 ISCHANGED(Name),
 CONTAINS($Profile.Name, &quot;Chapters&quot;),  
 NOT($Permission.Delegated_Administrator) 
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Program name cannot be changed.  Please contact your system administrator for this record change.</errorMessage>
</ValidationRule>