force-app/main/default/objects/Program__c/listViews/Chapters.listView-meta.xml
<ListView>
    <fullName>Chapters</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Chapter_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>Chapters</label>
</ListView>