force-app/main/default/objects/Program__c/listViews/Enterprise_Programs.listView-meta.xml
<ListView>
    <fullName>Enterprise_Programs</fullName>
    <columns>NAME</columns>
    <columns>Enterprise_Level_Program__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enterprise_Level_Program__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Enterprise Programs</label>
    <sharedTo>
        <role>VTM_Manager</role>
    </sharedTo>
</ListView>