force-app/main/default/objects/Program__c/listViews/Experience_Corps.listView-meta.xml
<ListView>
    <fullName>Experience_Corps</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Experience Corps</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>EC-</value>
    </filters>
    <label>Experience Corps</label>
</ListView>