force-app/main/default/objects/Program__c/listViews/Recent.listView-meta.xml
<ListView>
    <fullName>Recent</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>a1t1N000006yJtPQAU</value>
    </filters>
    <label>Recent</label>
    <language>en_US</language>
</ListView>