force-app/main/default/objects/Program__c/listViews/States.listView-meta.xml
<ListView>
    <fullName>States</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enterprise_Brand__c</field>
        <operation>equals</operation>
        <value>States</value>
    </filters>
    <label>States</label>
</ListView>