force-app/main/default/objects/Program__c/listViews/Tax_Aide.listView-meta.xml
<ListView>
    <fullName>Tax_Aide</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branding_Descriptor__c</field>
        <operation>equals</operation>
        <value>Tax-Aide</value>
    </filters>
    <label>Tax-Aide</label>
</ListView>